# Engine

./: .clangd  README.md  build-all.bat  build-all.sh  post-build.bat  post-build.sh  sources.txt
assets/conversations/: sh_dialogue.conversation
assets/materials/: test_material_tinted.kmt
assets/shaders/: Builtin.BloomBlurH.comp.glsl  Builtin.LineShader.frag.glsl  Builtin.LineShader.vert.glsl  Builtin.RaymarchShader.comp.glsl  Builtin.RaymarchVoxelize.comp.glsl  Builtin.SolidQuadShader.vert.glsl  Builtin.TextShader.frag.glsl  Builtin.UIShader.vert.glsl
engine/: build.bat  build.sh
engine/src/: defines.h  entry.h  game_types.h  test.cpp
engine/src/core/: application.cpp  application.h  asserts.h  clock.cpp  clock.h  event.cpp  event.h  hmemory.cpp  hmemory.h  input.cpp  input.h  logger.cpp  logger.h
engine/src/memory/: linear_allocator.cpp  linear_allocator.h
engine/src/platform/: filesystem.cpp  filesystem.h  platform.h  platform_linux.cpp
engine/src/renderer/: camera.h  renderer_backend.cpp  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_commandbuffer.cpp  vulkan_commandbuffer.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_shader_module.cpp  vulkan_shader_module.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_types.cpp  vulkan_types.inl  vulkan_utils.cpp  vulkan_utils.h
engine/src/renderer/vulkan/shaders/: vulkan_line_shader.cpp  vulkan_line_shader.h  vulkan_object_shader.cpp  vulkan_object_shader.h  vulkan_raymarch_shader.cpp  vulkan_raymarch_shader.h  vulkan_solid_quad_shader.cpp  vulkan_solid_quad_shader.h  vulkan_text_shader.cpp  vulkan_text_shader.h  vulkan_ui_shader.cpp  vulkan_ui_shader.h
engine/src/resources/: bitmap_font.cpp  bitmap_font.h  conversation.cpp  conversation.h  expression.cpp  expression.h  image_loader.cpp  image_loader.h  sdf_scene.cpp  sdf_scene.h
engine/src/systems/: geometry_system.cpp  geometry_system.h  material_system.cpp  material_system.h  shader_system.cpp  shader_system.h  texture_system.cpp  texture_system.h
games/SH/: build.bat  build.sh
games/SH/src/: camera_system.cpp  camera_system.h  entry.cpp  game.cpp  game.h  qa_system.cpp  qa_system.h
testbed/: build.sh
testbed/src/: entry.cpp  game.cpp  game.h  main.cpp  sdf_authoring.cpp  sdf_authoring.h
tests/: build.bat  build.sh
tests/src/: expect.h  main.cpp  test_manager.cpp  test_manager.h
tests/src/memory/: linear_allocator_tests.cpp  linear_allocator_tests.h
tools/conversation_editor/: CMakeLists.txt
tools/conversation_editor/src/: connection_item.cpp  connection_item.h  conversation_io.cpp  conversation_io.h  graph_scene.cpp  graph_scene.h  main.cpp  main_window.cpp  main_window.h  question_node.cpp  question_node.h
tools/sdf_editor/: CMakeLists.txt
tools/sdf_editor/src/: main.cpp  main_window.cpp  main_window.h  ray_intersect.h  scene_viewport.cpp  scene_viewport.h
